--- a/Multiplication by number/task-info.yaml
+++ b/Multiplication by number/task-info.yaml
@@ -123,5 +123,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/60/stages/324/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Mon, 16 Aug 2021 11:25:31 UTC
 record: -1
