JBA - Numeric Matrix Processor - Stage 3/6: Matrix by matrix multiplication

--- a/Matrix by matrix multiplication/task-info.yaml
+++ b/Matrix by matrix multiplication/task-info.yaml
@@ -293,5 +293,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/60/stages/325/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Mon, 16 Aug 2021 14:18:35 UTC
 record: -1
