JBA - Numeric Matrix Processor - Stage 4/6: Transpose

--- a/Transpose/task-info.yaml
+++ b/Transpose/task-info.yaml
@@ -401,5 +401,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/60/stages/326/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Mon, 16 Aug 2021 15:46:00 UTC
 record: -1
