--- a/Determined_/task-info.yaml
+++ b/Determined_/task-info.yaml
@@ -436,5 +436,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/60/stages/327/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 18 Aug 2021 12:17:29 UTC
 record: -1
