--- a/Inverse matrix/task-info.yaml
+++ b/Inverse matrix/task-info.yaml
@@ -467,5 +467,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/60/stages/328/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Thu, 19 Aug 2021 10:02:35 UTC
 record: -1
